// Use Proto 3 as syntax
syntax = "proto3";
// Define the package name
package test;
// Import the student proto
import "proto/studentpb/student.proto";
// Set the go package name
option go_package = "github.com/hajduksanchez/go_grpc/proto/testpb";

// Create the first structure
message Test {
	string id = 1;
	string name = 2;
}

message Question {
	string id = 1;
	string answer = 2;
	string question = 3;
	string test_id = 4;
}

// Response when some question is setted
message SetQuestionResponse {
	bool ok = 1;
}

// Request to get a Test
message GetTestRequest {
	string id = 1;
}

// Response when some test is setted
message SetTestResponse {
	string id = 1;
	string name = 2;
}

// Enroll a student in a test
message EnrollStudentRequest {
	string student_id = 1;
	string test_id = 2;
}

// Response when some student is enrolled
message SetEnrollStudentResponse {
	bool ok = 1;
}

// Get all student for a specific test
message GetStudentsPerTestRequest {
	string test_id = 1;
}

// Create the services
service TestService {
	// Get an specific test
	rpc GetTest (GetTestRequest) returns (Test);
	// Set a new test
	rpc SetTest (Test) returns (SetTestResponse);
	// Stream service
	rpc SetQuestions(stream Question) returns (SetQuestionResponse);
	// Stream to enroll a new student
	rpc EnrollStudent(stream EnrollStudentRequest) returns (SetEnrollStudentResponse);
	// Stream to get student list
	rpc GetStudentsPerTest(GetStudentsPerTestRequest) returns (stream student.Student);
}